--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
     "name"			: "client-api-connect/jwt",
 	"description"	: "Connection class to Api by JWT",
-	"type"			: "project",
+	"type"			: "library",
     "authors": [
         {
             "name": "Thomas Jacquey",
             "role": "Developer"
-        },
+        }
     ],
 	"require"		: {
 		"php": ">=7.0",
