--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name"			: "client-api/connect",
+    "name"			: "tomsjac/client-api-connect",
 	"description"	: "Connection class to Api by JWT",
 	"type"			: "library",
     "authors": [
