--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
 	"require"		: {
 		"php": ">=5.6.0",
         "guzzlehttp/guzzle": "^6.2",
+        "kevinrob/guzzle-cache-middleware" : "^2.0",
+        "league/flysystem" : "^1.0",
         "firebase/php-jwt": "^4.0"
 	},
 	
